[package]
name = "rust-arduino-blink"
version = "0.1.0"
authors = ["Felix Uhl <felix.uhl@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rust-arduino-blink"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
heapless = "0.7.14"

[dependencies.critical-section]
# This is just here to fix an incompatibility between critical-section 2.7.0 (dependency of heapless 0.7.14),
# and the toolchain nightly-2022-05-10. If heapless and critical-section get updated, you can try removing this fix
git = "https://github.com/iFreilicht/critical-section.git"
rev = "b92fd2190d53a683277844b072613d72b96e4d3f"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
features = ["arduino-uno"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
