[package]
name = "arduino-expander"
version = "0.1.0"
authors = ["Felix Uhl <felix.uhl@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
heapless = "0.7.14"

[dependencies.gpio-actions]
path = "../gpio_actions"

[dependencies.postcard]
# Postcard 1.0.0 is not compatible with 16-bit or 8-bit architectures yet
# If this PR gets merged and released, you can turn postcard into a regular dependency again: https://github.com/jamesmunns/postcard/pull/64
git = "https://github.com/iFreilicht/postcard"
rev = "c4b82bf17437129e8c94330431ff7c943bf54ce8"

[dependencies.critical-section]
# This is just here to fix an incompatibility between critical-section 2.7.0 (dependency of heapless 0.7.14),
# and the toolchain nightly-2022-05-10. If heapless and critical-section get updated, you can try removing this fix
git = "https://github.com/iFreilicht/critical-section.git"
rev = "b92fd2190d53a683277844b072613d72b96e4d3f"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
features = ["arduino-uno"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"