[package]
name = "serial-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "serial-gui"

[dependencies]
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3"

[dependencies.gpio-actions]
path = "../gpio_actions"

[dependencies.postcard]
# Postcard 1.0.0 is not compatible with 16-bit or 8-bit architectures yet
# If this PR gets merged and released, you can turn postcard into a regular dependency again: https://github.com/jamesmunns/postcard/pull/64
git = "https://github.com/iFreilicht/postcard"
rev = "c4b82bf17437129e8c94330431ff7c943bf54ce8"
features = ["use-std"]